--- a/src/componentes/ItemList/ItemList.css
+++ b/src/componentes/ItemList/ItemList.css
@@ -1,4 +1,9 @@
+
 .contenedorProductos {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    gap: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+    
 }
