--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -1,12 +1,41 @@
 header {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid black;
-}
+    align-items: center;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+  }
 
-li {
-    display: inline-block;
-    margin: 1rem;
-    cursor: pointer;
-}
+.Img {
+    padding-left: 10px;
+    width: 50px;
+    height: 50px;
+    margin-right: 100px;
+  }
+
+  nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
+    margin-left: 10px;
+  }
+  
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 10px;
+  }
+  
+  nav ul li a:hover {
+    background-color: #555;
+  }
+  
+  nav ul li a.active {
+    background-color: #888;
+  }
+  
